# firefox-extension-plasma-desktop-fix

./: .clang-format  .clangd  CMakeLists.txt  README.md  package-lock.json  package.json
src/: dbus-common.h
src/browser/: CMakeLists.txt  background.ts  manifest.json.in  native.ts  tsconfig.json  utility.ts  windows.ts
src/kwin/: CMakeLists.txt  CTestTestfile.cmake  cmake_install.cmake  metadata.json  plugin.cpp  workspaceDaemon.cpp  workspaceDaemon.h
src/native/: CMakeLists.txt  bridge.cpp  bridge.h  cmake_install.cmake  io.github.berrylium0078.plasma_desktop_fix.json
